# lockables

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench.cpp  bench_guarded.cpp  bench_value.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/lockables/: guarded.hpp  value.hpp
tests/: CMakeLists.txt  test.cpp  test_antipatterns.cpp  test_guarded.cpp  test_value.cpp
